[package]
name = "pallet-curveless-staking"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>", "Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/ETeissonniere/pallet-curveless-staking"
description = "An alternative to Substrate's staking pallet with no reward curve and where rewards can be customized"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde = { optional = true, version = "1.0.126" }
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"], version = "2.2.0" }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
pallet-session = { git = "https://github.com/paritytech/substrate.git", default-features = false, features = ["historical"], version = "4.0.0-dev", branch = "master" }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }

# Optional imports for benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true, version = "4.0.0-dev", branch = "master" }
rand_chacha = { default-features = false, optional = true, version = "0.2" }

[dev-dependencies]
rand_chacha = { version = "0.2" }
parking_lot = { version = "0.11.1" }
hex = { version = "0.4" }
sp-core = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-npos-elections/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand_chacha",
]
